# django_app

./: .env.example  .gitignore  README.md  catalog_fixture.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_article_options.py  0003_alter_article_options.py
blog/templates/: add_article.html  article_confirm_delete.html  article_detail.html  article_list.html
catalog/: context_processors.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_updated_at.py  0003_product_is_publicate.py  0004_alter_product_options_product_owner.py
catalog/templates/: add_product.html  base.html  contacts.html  home.html  main.html  menu.html  product_confirm_delete.html  product_details.html  products_by_category_list.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
templates/: base.html
templates/includes/: menu.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_moderators_group.py
users/migrations/: 0001_initial.py
users/templates/: login.html  profile_edit.html  register.html
