[tool.poetry]
name = "my-app"
version = "0.1.0"
description = ""
authors = ["maria_zhiganova <my.nik.mariann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.1"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
